<resources>
    <string name="view1" translatable="false">请输入要转换的温度</string>
    <string name="view_2" translatable="false">结果为：</string>
    <string name="app_1">Happy Birthday</string>
    <string name="btn_1" translatable="false">转换温度</string>
    <string name="teamA" translatable="false">Team  A</string>
    <string name="teamB" translatable="false">Team  B</string>
    <string name="score" translatable="false">0</string>
    <string name="score_1" translatable="false">+1</string>
    <string name="score_2" translatable="false">+2</string>
    <string name="score_3" translatable="false">+3</string>
    <string name="reset" translatable="false">reset</string>
    <string name="tip_1" translatable="false">美元汇率(本币：外币)</string>
    <string name="tip_2" translatable="false">欧元汇率(本币：外币)</string>
    <string name="tip_3" translatable="false">韩元汇率(本币：外币)</string>
    <string name="dollar" translatable="false">Dollar</string>
    <string name="Euro" translatable="false">Euro</string>
    <string name="convert" translatable="false">reset</string>
    <string name="Han" translatable="false">Han</string>
    <string name="Jump" translatable="false">reset_rate</string>
    <string name="jd" translatable="false">jd</string>
    <string name="set" translatable="false">setting</string>
    <string name="share" translatable="false">share</string>
    <string name="currency" translatable="false">Currency</string>
    <string name="naData" translatable="false">No Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="settings_title" translatable="false">配置页面</string>

    <!-- 控件标签 -->
    <string name="set_switch1_label" translatable="false">开关项</string>
    <string name="set_checkbox1_label" translatable="false">复选项</string>
    <string name="set_list_label" translatable="false">列表项</string>
    <string name="set_text1_label" translatable="false">选项1</string>
    <string name="set_text2_label" translatable="false">选项2</string>
    <string name="set_group1_label" translatable="false">分组1</string>
    <string name="set_group2_label" translatable="false">分组2</string>

    <!-- 控件ID -->
    <string name="set_switch1_key" translatable="false">set_switch1</string>
    <string name="set_checkbox1_key" translatable="false">set_checkbox1</string>
    <string name="set_list_key" translatable="false">set_list</string>
    <string name="set_text1_key" translatable="false">set_text1</string>
    <string name="set_text2_key" translatable="false">set_text2</string>
<!--    vote投票小案例-->
    <string name="hello_world" translatable="false">欢迎使用！</string>
    <string name="lab_approve" translatable="false">赞成</string>
    <string name="lab_object" translatable="false">反对</string>
    <string name="lab_abstain" translatable="false">弃权</string>
</resources>