<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity2">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026">

        <TextView
            android:id="@+id/teamA"
            android:textSize="55sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/teamA" />

        <TextView
            android:id="@+id/score"
            android:textSize="75sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score" />

        <Button
            android:id="@+id/score_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            android:onClick="bnt_3"
            android:text="@string/score_3" />

        <Button
            android:id="@+id/score_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            android:onClick="bnt_2"
            android:text="@string/score_2" />

        <Button
            android:id="@+id/score_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            android:onClick="bnt_1"
            android:text="@string/score_1" />
    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="109dp"
        android:layout_height="45dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="395dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="16dp"
        android:text="@string/reset"
        android:textSize="20sp"
        android:onClick="reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>