<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText

            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:layout_gravity="center"
            android:hint="@string/tip"
            android:inputType="number"
            android:textSize="36sp" />


        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:textSize="30sp"
            android:layout_gravity="center"/>


        <Button
            android:id="@+id/euro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Euro"
            android:onClick="Convert"/>

        <Button
            android:id="@+id/dollar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dollar"
            android:onClick="Convert"/>

        <Button
            android:id="@+id/han"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Han"
            android:onClick="Convert"/>

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Jump"
            android:onClick="jump"/>

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jd"
            android:onClick="JD"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>