<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AutoRateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText

            android:id="@+id/dollar"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:layout_gravity="center"
            android:hint="@string/tip_1"
            android:inputType="number|text"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/euro"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:layout_gravity="center"
            android:hint="@string/tip_2"
            android:inputType="number|text"
            android:textSize="30sp" />
        <EditText
            android:id="@+id/han"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:layout_gravity="center"
            android:hint="@string/tip_3"
            android:inputType="number|text"
            android:textSize="30sp" />

<!--        <TextView-->
<!--            android:id="@+id/result"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="67dp"-->
<!--            android:textSize="30sp"-->
<!--            android:layout_gravity="center"/>-->


        <Button
            android:id="@+id/convert"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="77dp"
            android:textSize="30dp"
            android:text="@string/convert"
            android:onClick="Reset"/>





    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>